# valkey-ai-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md
manifests/: crd.yaml  deployment.yaml  rbac.yaml
manifests/samples/: postgresql.yaml  secret.yaml  valkey-cluster-helm.yaml  valkey-cluster.yaml  valkeycluster.yaml
skills/postgresql/: SKILL.md
skills/postgresql/prompts/: executor.md  planner.md  simulator.md  verifier.md
skills/postgresql/scripts/: failover.sh  get_config.sh  init_primary.sh  setup_replica.sh
skills/postgresql/templates/: configmap.yaml  service.yaml  statefulset.yaml
skills/valkey-cluster/: SKILL.md
skills/valkey-cluster-helm/: SKILL.md
skills/valkey-cluster-helm/prompts/: agent.md  executor.md  planner.md  simulator.md  verifier.md
skills/valkey-cluster/examples/: 3-master.yaml
skills/valkey-cluster/prompts/: executor.md  planner.md  simulator.md  verifier.md
skills/valkey-cluster/scripts/: add_node.sh  cluster_init.sh  get_config.sh  rebalance.sh  remove_node.sh  reshard.sh
skills/valkey-cluster/templates/: configmap.yaml  service.yaml  statefulset.yaml
src/: channel.rs  crd.rs  lib.rs  main.rs  types.rs
src/agent/: agent.rs  mod.rs  provider.rs  tool.rs  types.rs  worker.rs
src/controller/: mod.rs  status.rs
src/monitor/: registry.rs  runner.rs
src/pipeline/: executor.rs  mod.rs  planner.rs  simulator.rs  verifier.rs
src/skill/: loader.rs  mod.rs  trigger.rs  types.rs
src/tools/: desired_state.rs  fs.rs  helm.rs  k8s.rs  mod.rs  runtime.rs  state.rs  template.rs  valkey.rs
(+4 files in other folders)
