[package]
name = "krust-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.98", features = ["client", "config", "runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
serde_yaml = "0.9.34"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
